testing/stage_15/valid/add_local_short_and_long.c

	
int main()
{
	long int a=4;
	short int b=2;
	return a+b;
}