testing/stage_15/invalid/long_short.c
int main()
{
	long short a=4;
	return a;
}